kubernetes/cart-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-cart-mongo
spec:
  selector:
    app: eatnow-cart-mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eatnow-cart-mongo
spec:
  selector:
    matchLabels:
      app: eatnow-cart-mongo
  template:
    metadata:
      labels:
        app: eatnow-cart-mongo
    spec:
      containers:
        - name: eatnow-cart-mongo
          image: mongo:5
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
            - name: init-db-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: eatnow-cart-mongo-pvc
        - name: init-db-scripts
          hostPath:
            # directory location on host
            path: /init-db/cart/scripts
            # this field is optional
            type: Directory
