kubernetes/cart-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-cart-redis
spec:
  selector:
    app: eatnow-cart-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eatnow-cart-redis
spec:
  selector:
    matchLabels:
      app: eatnow-cart-redis
  template:
    metadata:
      labels:
        app: eatnow-cart-redis
    spec:
      containers:
        - name: eatnow-cart-redis
          image: redis:7.0.4
          ports:
            - containerPort: 6379
