kubernetes/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-elasticsearch
spec:
  selector:
    app: eatnow-elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eatnow-elasticsearch
spec:
  selector:
    matchLabels:
      app: eatnow-elasticsearch
  template:
    metadata:
      labels:
        app: eatnow-elasticsearch
    spec:
      containers:
        - name: eatnow-elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: init-db
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: init-db
          hostPath:
            path: /init-db/search/persist
            type: Directory
