kubernetes/restaurant-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-restaurant-mongo
spec:
  selector:
    app: eatnow-restaurant-mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eatnow-restaurant-mongo
spec:
  serviceName: eatnow-restaurant-mongo
  replicas: 1
  selector:
    matchLabels:
      app: eatnow-restaurant-mongo
  template:
    metadata:
      labels:
        app: eatnow-restaurant-mongo
    spec:
      containers:
        - name: eatnow-restaurant-mongo
          image: mongo:5
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
            - name: init-db-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: init-db-data
              mountPath: /tmp/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: eatnow-restaurant-mongo-pvc
        - name: init-db-scripts
          hostPath:
            # directory location on host
            path: /init-db/restaurant/scripts
            # this field is optional
            type: Directory
        - name: init-db-data
          hostPath:
            # directory location on host
            path: /init-db/restaurant/data
            # this field is optional
            type: Directory
