kubernetes/restaurant.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-restaurant
spec:
  selector:
    app: eatnow-restaurant
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eatnow-restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eatnow-restaurant
  template:
    metadata:
      labels:
        app: eatnow-restaurant
    spec:
      containers:
        - name: eatnow-restaurant
          image: ebinphilip/eatnow-restaurant
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
