kubernetes/search.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-search
spec:
  selector:
    app: eatnow-search
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eatnow-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eatnow-search
  template:
    metadata:
      labels:
        app: eatnow-search
    spec:
      containers:
        - name: eatnow-search
          image: ebinphilip/eatnow-search
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
