kubernetes/user-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: eatnow-user-postgres
spec:
  selector:
    app: eatnow-user-postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eatnow-user-postgres
spec:
  serviceName: eatnow-user-postgres
  replicas: 1
  selector:
    matchLabels:
      app: eatnow-user-postgres
  template:
    metadata:
      labels:
        app: eatnow-user-postgres
    spec:
      containers:
        - name: eatnow-user-postgres
          image: postgres:10.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
            - name: init-db-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: eatnow-user-postgres-pvc
        - name: init-db-scripts
          hostPath:
            # directory location on host
            path: /init-db/user/scripts
            # this field is optional
            type: Directory
